# portfolio-website

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  PORTFOLIO_BUILD_PROMPT.md  README.md  eslint.config.mjs  final-brainstorming-localization-promt.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  preview.yml
.husky/: pre-commit
.windsurf/rules/: anti-laziness-core-principles.md  be-honest-direct-critical.md  clean-project-structure.md  component-driven.md  config-yaml-first.md  context7-and-docs-first.md  github-project-management.md  i18n-from-start.md  local-demo-before-push.md  make-sure-it-works.md  no-half-knowledge.md  no-terminal-oneline-scripts.md  skill-by-skill.md  use-pnpm-makefile.md
.windsurf/workflows/: add-translation.md  deploy.md  new-component.md  new-skill.md  review.md
config/: site.yaml
config/cv/: cv-design.yaml  cv.full.yaml  cv.public.yaml
config/i18n/: glossary.yaml
design-system/reebal-sami-portfolio/: MASTER.md
docs/: ARCHITECTURE.md  architecture.d2
docs/brainstorming/: 2026-04-22-opus47-continuation-prompt.md
docs/design/: transitions-and-hero-exploration.md
infra/: README.md  package-lock.json  package.json
public/: cv.txt  linkedin-privacy.html
scripts/: build-for-deploy.sh  check-glossary-drift.ts  check-locale-parity.ts  generate-cv-pdfs.ts  generate-cv.ts  transcreate.ts
src/: proxy.ts
src/app/: globals.css  (+6 more)
tests/: setup.ts
utility/: extract_pdf_to_markdown.py  setup_github_project.sh
(+224 files in other folders)
